setup/9-Monitoring/arm-exporter.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: prometheus-arm-exporter
  namespace: infra
  labels:
    app: prometheus
    component: arm-exporter
spec:
  template:
    metadata:
      name: prometheus-arm-exporter
      labels:
        app: prometheus
        component: arm-exporter
    spec:
      containers:
        - image: carlosedp/arm_exporter
          name: arm-exporter
          ports:
            - name: prom-arm-exp
              #^ must be an IANA_SVC_NAME (at most 15 characters, ..)
              containerPort: 9243
              hostPort: 9243
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-arm-exporter
  namespace: infra
  labels:
    app: prometheus
    component: arm-exporter
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: prometheus-arm-exporter
      port: 9243
      protocol: TCP
      targetPort: 9243
  selector:
    app: prometheus
    component: arm-exporter
---
