setup/9-Monitoring/kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: kube-system
  labels:
    k8s-app: kube-state-metrics
spec:
  selector:
    matchLabels:
      k8s-app: kube-state-metrics
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: kube-state-metrics
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: corberos/kube-state-metrics:v1.5.0
          ports:
            - name: http-metrics
              containerPort: 8080
            - name: telemetry
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
        #- name: addon-resizer
        #  image: corberos/addon-resizer:2.1
        #  resources:
        #    limits:
        #      cpu: 150m
        #      memory: 50Mi
        #    requests:
        #      cpu: 150m
        #      memory: 50Mi
        #  env:
        #    - name: MY_POD_NAME
        #      valueFrom:
        #        fieldRef:
        #          fieldPath: metadata.name
        #    - name: MY_POD_NAMESPACE
        #      valueFrom:
        #        fieldRef:
        #          fieldPath: metadata.namespace
        #  command:
        #    - /pod_nanny
        #    - --container=kube-state-metrics
        #    - --cpu=100m
        #    - --extra-cpu=1m
        #    - --memory=100Mi
        #    - --extra-memory=2Mi
        #    #- --threshold=5
        #    - --deployment=kube-state-metrics
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-system
  labels:
    k8s-app: kube-state-metrics
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: http-metrics
      port: 8080
      targetPort: http-metrics
      protocol: TCP
    - name: telemetry
      port: 8081
      targetPort: telemetry
      protocol: TCP
  selector:
    k8s-app: kube-state-metrics
