setup/9-Monitoring/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-scheduler
  labels:
    k8s-app: kube-scheduler
spec:
  selector:
    component: kube-scheduler
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10251
      targetPort: 10251
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-controller-manager
  labels:
    k8s-app: kube-controller-manager
spec:
  selector:
    component: kube-controller-manager
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10252
      targetPort: 10252
      protocol: TCP
---
# todo add core dns and etcd
