setup/9-Monitoring/blackbox-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: infra
  labels:
    app: blackbox-exporter
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: http
      port: 9115
      protocol: TCP
      targetPort: 9115
  selector:
    app: blackbox-exporter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blackbox-exporter
  namespace: infra
  labels:
    name: blackbox-exporter
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: dashboards-auth
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    kubernetes.io/ingress.class: traefik
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Blackbox Exporter"
    forecastle.stakater.com/group: "Prometheus"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/ForecastleIcons/master/prometheus.png"
spec:
  rules:
    - host: blackbox.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            backend:
              serviceName: blackbox-exporter
              servicePort: 9115
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: infra
  labels:
    app: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
        blinktShow: "true"
        blinktColor: "00ff00"
    spec:
      containers:
        - name: prometheus-blackbox-exporter
          image: lwolf/blackbox-exporter:v0.15.1-armv6
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/config/blackbox.yaml
          ports:
            - containerPort: 9115
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            procMount: Default
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/config
              name: config
        - name: configmap-reload
          image: carlosedp/configmap-reload:v0.2.2-arm
          imagePullPolicy: IfNotPresent
          args:
            - --volume-dir=/etc/config
            - --webhook-url=http://localhost:9115/-/reload
          volumeMounts:
            - mountPath: /etc/config
              name: config
              readOnly: true
      volumes:
        - configMap:
            defaultMode: 420
            name: blackbox-exporter
          name: config
---
