setup/9-Monitoring/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: infra
  labels:
    k8s-app: grafana
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    k8s-app: grafana
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: grafana
  namespace: infra
  labels:
    k8s-app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: grafana
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: grafana
        blinktShow: "true"
        blinktColor: "ff00ff"
    spec:
      serviceAccountName: grafana
      securityContext:
        fsGroup: 472
        runAsUser: 472
      containers:
        - name: grafana
          image: grafana/grafana:6.3.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: config
              mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
              subPath: datasources.yaml
            - name: storage
              mountPath: "/var/lib/grafana"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
      volumes:
        - name: config
          configMap:
            name: grafana
        - name: storage
          persistentVolumeClaim:
            claimName: grafana-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: infra
  labels:
    k8s-app: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: dashboards-auth
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: "Tools"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/ForecastleIcons/master/grafana.png"
spec:
  rules:
    - host: grafana.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
